openpearl-code/testsuite/must_not_compile/00_basics/003_no_module_name.expect
003_no_module_name.prl:1:6: ERROR : Syntax error :no viable alternative at input ';'
MODULE;
      ^
